corrected duplicate font awesome icon by updating explorer icon on div button

--- a/public/members.html
+++ b/public/members.html
@@ -113,7 +113,7 @@
               Check out our resources for travel ideas & inspiration.
             </h4>
             <a type="button" href="explore.html" class="btn member btn-primary btn-lg">
-              <i class="fas fa-pen fa-lg"></i>EXPLORE
+              <i class="fas fa-globe-americas fa-lg"></i>EXPLORE
             </a>
           </div>
         </div>
