created dynamic elements

--- a/public/members.html
+++ b/public/members.html
@@ -66,7 +66,7 @@
    
       </div>
     </div>
-
+    <div class= "row" id="displayEl"></div>
     <div class="jumbotron row container" style="opacity: 0.8">
       <div class="jumbotron tours-activities" id="tours-activities" style="opacity: 0.8">
 
