--- a/public/members.html
+++ b/public/members.html
@@ -60,7 +60,7 @@
                 <option value="Los Angeles">Los Angeles</option>
                 <option value="Palm Springs">Palm Springs</option>
               </select>
-              <button class="submitBtn" id="submitBtn" type="submit">Go!</button>
+              <button class="submitBtn" id="submitBtn">Go!</button>
             </form>
           </nav>
    
