--- a/public/blog.html
+++ b/public/blog.html
@@ -25,7 +25,7 @@
     <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
       <ul class="navbar-nav ml-auto links">
         <li class="nav-item"><a class="nav-item nav-link" href="/members"><i class="fas fa-user"></i></a></li>
-              <li class="nav-item"><span><a class="nav-link active" href="/blog">Create New Blog<span class="sr-only">(current)</span></a></li>
+              <li class="nav-item"><span><a class="nav-link active" href="/blogs">View Blogs<span class="sr-only">(current)</span></a></li>
                 <li class="nav-item"><a class="nav-item nav-link" href="/logout">Logout</a></li>
       </ul>
     </div>
