fixed rendering data and layout

--- a/public/signup.html
+++ b/public/signup.html
@@ -19,7 +19,7 @@
   <h1 class="title">The Traveler's Memoir</h1>
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-md-offset-3">
+      <div class="screen col-md-6 col-md-offset-3">
         <h2>Sign Up</h2>
         <form class="signup">
           <div class="form-group">
