--- a/public/members.html
+++ b/public/members.html
@@ -50,7 +50,7 @@
         </h1>
         
           <nav class="selectionContainer row jumbotron " style="opacity: 0.8">
-            <form class="selectCity row" action="submit">
+            <form class="selectCity row" >
               <p class="travelLocation lead  my-3">
                 We're glad you're here, here
                 are some popular travel locations: </p>
@@ -60,7 +60,7 @@
                 <option value="Los Angeles">Los Angeles</option>
                 <option value="Palm Springs">Palm Springs</option>
               </select>
-              <button class="submitBtn" id="submitBtn" type="submit">Go!</button>
+              <button class="submitBtn" id="submitBtn" >Go!</button>
             </form>
           </nav>
    
