updated member page to include calendar and amadeus js file links

--- a/public/members.html
+++ b/public/members.html
@@ -133,8 +133,8 @@
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
   </script>
   <script type="text/javascript" src="js/members.js"></script>
-  <!-- <script type="text/javascript" src="js/calendar.js"></script> -->
-  <!-- <script type="text/javascript" src="js/amadeus.js"></script> -->
+  <script type="text/javascript" src="js/calendar.js"></script>
+  <script type="text/javascript" src="js/amadeus.js"></script>
 
 
 </body>
